# waffledb

./: .gitignore  CMakeLists.txt  README.md
cppdb/: CMakeLists.txt  cppdb.cpp  cppdb.h  database.cpp  database.h
cppdb-cli/: CMakeLists.txt  main.cpp
cppdb-tests/: CMakeLists.txt  dbmanagement-tests.cpp  keyvalue-tests.cpp
cppdb/include/: cppdb.h  database.h
cppdb/include/extensions/: extdatabase.h
cppdb/src/: cppdb.cpp  database.cpp
waffledb/: CMakeLists.txt
waffledb-cli/: CMakeLists.txt  cxxopts.hpp  main.cpp
waffledb-tests/: CMakeLists.txt  dbmanagement-tests.cpp  keyvalue-tests.cpp  operations-tests.cpp  performance-tests.cpp
waffledb/include/: adaptive_index.h  columnar_storage.h  compression.h  database.h  dsl_parser.h  lock_free_structures.h  waffledb.h  wal.h
waffledb/include/extensions/: extdatabase.h
waffledb/src/: adaptive_index.cpp  columnar_storage.cpp  compression.cpp  database.cpp  dsl_parser.cpp  lock_free_structures.cpp  waffledb.cpp  wal.cpp
